--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
     header {
       text-align: center;
-      background: url("");
+      background: url("images/image script.jpg");
       background-size: cover;
-      color: blue;
+      color: Gold;
     }
     .nav {
       color: white;
